--- a/static/css/navbar.css
+++ b/static/css/navbar.css
@@ -28,8 +28,10 @@ span.navbar-toggler-icon {
 }
 .drop a {
   color: black;
-  font-size: 15px;
+  font-size: 16px;
   letter-spacing: 0.5px;
+  font-weight: bold;
+  padding: 10px;
 }
 
 .dropdown-item:hover {
@@ -50,6 +52,8 @@ span.navbar-toggler-icon {
 .ss {
   border-radius: 10px;
   transition: 0.3s all ease;
+  font-weight: bold;
+  font-size: 16px;
 }
 .ss:hover {
   color: white;
