--- a/static/css/viewevents.css
+++ b/static/css/viewevents.css
@@ -24,34 +24,35 @@ h3 {
 }
 
 .card {
-  width: 20%;
+  width: 16rem;
   display: inline-block;
   box-shadow: 2px 2px 20px black;
   border-radius: 5px;
-  margin: 2%;
   background-color: #1ee86f;
+  transition: 0.5s all ease;
+  cursor: pointer;
+  margin: 30px;
+  padding: 5px;
 }
 .card:hover {
   transform: translateY(-5px);
   box-shadow: 5px 5px 15px rgba(0, 0, 0, 0.6);
 }
-.card {
-  transition: 0.3s all ease;
-  cursor: pointer;
-  margin: 30px;
-}
+
 .image {
   background-size: cover;
   grid-area: image;
-  background: url("img1.jpg");
-  border-top-left-radius: 15px;
-  border-top-right-radius: 15px;
+  height: 163px;
+  overflow: hidden;
+  border-radius: 8px;
 }
 
 .image img {
   width: 100%;
-  border-top-right-radius: 5px;
-  border-top-left-radius: 5px;
+}
+
+img {
+  border-radius: 8px;
 }
 
 .title {
@@ -80,7 +81,7 @@ h4 {
 }
 .don {
   background-color: #ffda15;
-  border: 1px solid black;
+  border: 2px solid black;
   border-radius: 5px;
   padding: 10px;
   color: black;
