--- a/user/templates/user/viewevents.html
+++ b/user/templates/user/viewevents.html
@@ -14,7 +14,7 @@
     <div class="col-md-4 col-sm-12 col-xs-12">
       <div class="card" style="width: 16rem;" ;>
         <div class="image">
-          <img src="{% static 'images/g.jpg' %}" alt="Coming soon" />
+          <img src="{{event.cover.url}}" alt="Coming soon" />
         </div>
         <div class="title">
           <h1>{{event.event_title}}</h1>
